--- a/extensions/VisualEditor/modules/ve-mw/i18n/en.json
+++ b/extensions/VisualEditor/modules/ve-mw/i18n/en.json
@@ -270,6 +270,7 @@
 	"visualeditor-savedialog-title-nochanges": "No changes to review",
 	"visualeditor-savedialog-title-review": "Review your changes",
 	"visualeditor-savedialog-title-save": "Save your changes",
+  	"visualeditor-editdetailsdialog-title": "Details about your changes",
 	"visualeditor-savedialog-warning-dirty": "Your edit may have been corrupted – please review before saving.",
 	"visualeditor-saveerror": "Error saving data to server: $1.",
 	"visualeditor-serializeerror": "Error loading data from server: $1.",
