More new strings

--- a/extensions/VisualEditor/modules/ve-mw/i18n/en.json
+++ b/extensions/VisualEditor/modules/ve-mw/i18n/en.json
@@ -271,6 +271,11 @@
 	"visualeditor-savedialog-title-review": "Review your changes",
 	"visualeditor-savedialog-title-save": "Save your changes",
   	"visualeditor-editdetailsdialog-title": "Details about your changes",
+  	"visualeditor-editdetailsdialog-option-minor": "Minor Text Edit",
+  	"visualeditor-editdetailsdialog-option-fixed": "Fixed Incorrect Information",
+  	"visualeditor-editdetailsdialog-option-info": "Added New Information",
+  	"visualeditor-editdetailsdialog-option-other": "Other",
+  	"visualeditor-editdetailsdialog-describe": "Tell us about the changes you made",
 	"visualeditor-savedialog-warning-dirty": "Your edit may have been corrupted – please review before saving.",
 	"visualeditor-saveerror": "Error saving data to server: $1.",
 	"visualeditor-serializeerror": "Error loading data from server: $1.",
